<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="120dp"
            android:layout_height="118dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/logo"
            tools:srcCompat="@drawable/chef" />

        <Button
            android:id="@+id/change_avatar"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:text="@string/change_avatar"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/user"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_contactNumber"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/contact1"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/mail"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button_profile"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_changepw"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:text="@string/change_pw"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_orderhis"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:text="@string/history"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="150dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:text="@string/signout"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>