<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FragmentAboutUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:text="@string/our_service"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/decoration"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/decoration_desc"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/event"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/event_desc"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/florist"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/florist_desc"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/arrow"
                android:text="@string/inquiries"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/contact"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="end"
                android:layout_marginStart="55dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/contact1"
                android:paddingTop="10dp"
                android:text="@string/contact"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="150dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/arrow"
                android:text="@string/locate"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/locate"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="end"
                android:layout_marginStart="55dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/map"
                android:paddingTop="10dp"
                android:text="@string/map"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>