<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/rate"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/rate_desc"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/service"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:max="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/food_and_beverage"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/fnb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:max="5" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:hint="@string/feedback"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="150dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:text="@string/submit_button"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>