<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="90dp"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/mail"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:drawableEnd="@drawable/password"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>